# experimental

./: .gitignore  .project  README.md  test.py  test_agent_debug.py  test_agent_simple.py
Cash/: build.xml
CashStockReporter/: CashStockReporter.py
CherryPy/: onePage.py
CloudPython/: README.md  app.py  app_tests.py  cloud-native.db
Diamond - System Loader/: diamond.py  sys_utils.py
Flask/PandasExcercise/: README.rst  setup.cfg
Flask/PandasExcercise/analyzer/: __init__.py  config.py  views.py
Flask/PandasExcercise/analyzer.egg-info/: PKG-INFO  SOURCES.txt
Flask/PandasExcercise/tests/: conftest.py  test_analyzer.py
Flask/TravelAgency/: README.md  app_init.py  config.py  db.py  email_handler.py  main.py  models.py  pyproject.toml  views.py
Flask/TravelAgency/alembic/versions/: 5d0fd5e3fe1c_initial_migration.py  97c06a1da37e_client_and_itinerary_models.py
Flask/TravelAgency/init_scripts/: clients.sql  create_tables.py  init.sh  itineraries.sql
Flask/TravelAgency/migrations/versions/: 1e4888750a83_extra.py  2316ce882b3c_no_extra.py
Flask/TravelAgency/templates/: base.html
Flask/TravelAgency/templates/clients/: add_client.html  clients.html
Flask/TravelAgency/templates/itineraries/: add_itineraries.html  itineraries.html
Flask/TravelAgency/tests/: conftest.py  test_clients.py  test_itineraries.py
Jupyter/: my_magic.py
MRO/: sophisticated_diamond.py
MyMovieDB/: My_movie_cherry.py  My_movie_db.py  my_movie_db.py
Pygame/: docs.txt
PythonExcercises/: argparse_ex.py  logger_ex.py  mongodb_ex.py  paramiko_ex.py  piramiko_ex.py  rest_ex.py
(+306 files in other folders)
