[metadata]
name = analyzer
version = 1.0.0
maintainer = Michal Batyra
maintainer_email = michal.batyra@gmail.com
description = The great analyzer application
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
packages = find:
include_package_data = true
install_requires =
    Flask

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    analyzer