[project]
name = "travelagency"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "black>=26.5.1",
    "dotenv>=0.9.9",
    "flask>=3.1.3",
    "flask-sqlalchemy>=3.1.1",
    "isort>=8.0.1",
    "psycopg2-binary>=2.9.12",
    "pytest>=9.1.0",
]
